--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tcconsent-react-native",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": " Commanders Act's TCConsent SDK bridge for react native",
   "main": "src/index",
   "module": "src/index",
@@ -80,7 +80,7 @@
     "typescript": "^5.0.2"
   },
   "dependencies": {
-    "tccore-react-native": "github:commandersAct/tccore-react-native#1.0.1"
+    "tccore-react-native": "git+https://github.com/commandersact/tccore-react-native#1.1.0"
   },
   "resolutions": {
     "@types/react": "17.0.21"
