--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@commanders-act/tcconsent-react-native",
+  "name": "@commandersact/tcconsent-react-native",
   "version": "1.3.0",
   "description": " Commanders Act's TCConsent SDK bridge for react native",
   "main": "src/index",
@@ -77,7 +77,8 @@
     "react-native-builder-bob": "^0.21.3",
     "release-it": "^15.0.0",
     "turbo": "^1.10.7",
-    "typescript": "^5.0.2"
+    "typescript": "^5.0.2",
+    "@commandersact/tccore-react-native": "git+https://github.com/commandersact/tccore-react-native#scoped_package_name"
   },
   "dependencies": {
   },
@@ -87,7 +88,7 @@
   "peerDependencies": {
     "react": "*",
     "react-native": "*",
-    "@commanders-act/tccore-react-native": "1.2.0"
+    "@commandersact/tccore-react-native": "1.2.0"
   },
   "engines": {
     "node": ">= 16.0.0"
