--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "tcconsent-react-native",
-  "version": "1.2.1",
+  "name": "@commandersact/tcconsent-react-native",
+  "version": "1.3.0",
   "description": " Commanders Act's TCConsent SDK bridge for react native",
   "main": "src/index",
   "module": "src/index",
@@ -77,17 +77,18 @@
     "react-native-builder-bob": "^0.21.3",
     "release-it": "^15.0.0",
     "turbo": "^1.10.7",
-    "typescript": "^5.0.2"
+    "typescript": "^5.0.2",
+    "@commandersact/tccore-react-native": "git+https://github.com/commandersact/tccore-react-native#scoped_package_name"
   },
   "dependencies": {
-    "tccore-react-native": "git+https://github.com/commandersact/tccore-react-native#1.1.1"
   },
   "resolutions": {
     "@types/react": "17.0.21"
   },
   "peerDependencies": {
     "react": "*",
-    "react-native": "*"
+    "react-native": "*",
+    "@commandersact/tccore-react-native": "1.2.0"
   },
   "engines": {
     "node": ">= 16.0.0"
