--- a/android/build.gradle
+++ b/android/build.gradle
@@ -81,8 +81,8 @@ dependencies {
   // For < 0.71, this will be from the local maven repo
   // For > 0.71, this will be replaced by `com.facebook.react:react-android:$version` by react gradle plugin
   //noinspection GradleDynamicVersion
-  implementation "com.facebook.react:react-native:+"
-  implementation "com.tagcommander.lib:core:5.4.1"
-  implementation "com.tagcommander.lib:Consent:5.2.7"
+  implementation 'com.facebook.react:react-native:+'
+  implementation 'com.tagcommander.lib:core:5.4.4'
+  implementation 'com.tagcommander.lib:Consent:5.3.2'
 }
 
