--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@commandersact/tcconsent-react-native",
-  "version": "1.3.13",
+  "version": "1.4.0",
   "description": " Commanders Act's TCConsent SDK bridge for react native",
   "main": "src/index",
   "module": "src/index",
@@ -28,6 +28,9 @@
     "!**/__mocks__",
     "!**/.*"
   ],
+    "expo": {
+    "plugin": "./app.plugin.js"
+  },
   "scripts": {
     "test": "jest",
     "typecheck": "tsc --noEmit",
@@ -77,7 +80,7 @@
     "release-it": "^15.0.0",
     "turbo": "^1.10.7",
     "typescript": "^5.0.2",
-    "@commandersact/tccore-react-native": "git+https://github.com/commandersact/tccore-react-native#1.2.8"
+    "@commandersact/tccore-react-native": "git+https://github.com/commandersact/tccore-react-native#1.3.0"
   },
   "dependencies": {
   },
@@ -87,7 +90,7 @@
   "peerDependencies": {
     "react": "*",
     "react-native": "*",
-    "@commandersact/tccore-react-native": "1.2.8"
+    "@commandersact/tccore-react-native": "1.3.0"
   },
   "engines": {
     "node": ">= 16.0.0"
